[package]
name = "smashline-porting-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hash40 = "1.3.1"
proc-macro2 = { version = "1.0.78", features = ["span-locations", "nightly"] }
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "extra-traits"] }
walkdir = "2.4.0"
